<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activities.MainActivity">

    <ImageView android:id="@+id/logo"
               android:layout_width="match_parent"
               android:layout_height="120dp"
               android:scaleType="fitCenter"
               android:src="@drawable/logo"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:contentDescription="@string/login"
               app:layout_constraintHorizontal_bias="0.0"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/banner_container"
            tools:layout_editor_absoluteX="1dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/gray_5"
                    android:textColorHint="@color/gray_16"
                    android:id="@+id/bot_username"
                    android:padding="14dp"
                    android:hint="@string/bot_id"
                    android:background="@drawable/rounded_edittext"
                    android:singleLine="true"
                    android:inputType="text"
                    android:autofillHints=""
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/gray_5"
                    android:textColorHint="@color/gray_16"
                    android:id="@+id/bot_password"
                    android:padding="14dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/bot_pwd"
                    android:singleLine="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:inputType="textPassword"
                    android:autofillHints=""/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/gray_5"
                    android:textColorHint="@color/gray_16"
                    android:id="@+id/room_name"
                    android:padding="14dp"
                    android:hint="@string/room_name"
                    android:background="@drawable/rounded_edittext"
                    android:singleLine="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:inputType="text"
                    android:autofillHints=""/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp">

                <CheckBox android:id="@+id/remember_me_check_box"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_marginEnd="-10dp"
                          android:layout_marginStart="-5dp"
                    />

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/remember_me"
                          android:textColor="@color/design_default_color_primary"
                          android:textStyle="bold"
                          android:fontFamily="sans-serif"
                          android:textSize="15sp"
                          />

                <LinearLayout android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:gravity="end"
                        android:layout_gravity="end">

                    <Button android:id="@+id/btn_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="24dp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
            android:id="@+id/banner_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:background="@color/cardview_dark_background"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:padding="4dp"
                  android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/https_dbh4ck_blogspot_com" />

            <LinearLayout android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_gravity="center"
                          android:layout_width="wrap_content">

                <ImageView android:id="@+id/git"
                           android:layout_width="24dp"
                           android:layout_height="24dp"
                           android:padding="2dp"
                           android:layout_gravity="center"
                           android:src="@drawable/github_icon" />

                <TextView android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:padding="4dp"
                          android:textColor="@color/white"
                          android:clickable="true"
                          android:textStyle="bold"
                          android:layout_weight="1"
                          android:text="@string/dbh4ck" android:focusable="true"/>
            </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>